# surfacenet

./: .gitignore  SurfaceNet_Architecture.md  pyproject.toml
surfacenet/: types.py
tests/: conftest.py  test_types.py
tests/fixtures/: cube.ply  metadata_sample.json
